<resources>
    <string name="app_name">WeatherWake</string>
    <string name="action_settings">Settings</string>
    <string name="pairing1">Hot and Sunny</string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>
    <string name="temperature">Temperature (F)</string>
    <string name="precipitation">Precipitation (%)</string>
    <string name="windMPH">Wind Speed (MPH)</string>
    <string name="mon_button">MON</string>
    <string name="tue_button">TUE</string>
    <string name="wed_button">WED</string>
    <string name="thu_button">THU</string>
    <string name="fri_button">FRI</string>
    <string name="sat_button">SAT</string>
    <string name="sun_button">SUN</string>
    <string name="default_alarm">Alarm 1</string>
    <string name="one_min">1 minute</string>
    <string name="five_min">5 minutes</string>
    <string name="ten_min">10 minutes</string>
    <string name="thirty_min">30 minutes</string>
    <string name="confirm_cancel">confirm_cancel</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="weather_setting">Weather Setting</string>
    <string name="location">Location</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="save_alarm">Save Alarm</string>
    <string name="ok">Ok</string>
    <string name="snooze">Snooze</string>
</resources>
